--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ section{
     background: white;
     border-radius: 10px;
     padding: 15px;
-    width: 450px;
+    max-width: 450px;
     margin: 0 auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.322);
 }
@@ -70,4 +70,7 @@ footer{
     font-weight: bold;
     text-shadow: 1px 1px 2px black;
     text-align: center;
+}
+@media screen and (max-width: 500px){
+    
 }
